k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hvltopia-d
  labels:
    app: hvltopia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hvltopia
  template:
    metadata:
      labels:
        app: hvltopia
    spec:
      imagePullSecrets:
        - name: regcrednheekghcr
      containers:
        - name: hvltopia
          image: ghcr.io/nheek/hvltopia:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "10Mi"
              cpu: "40m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 10
