k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hvltopia-service
  labels:
    app: hvltopia
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hvltopia
