k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hvltopia-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: hvltopia.nheek.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hvltopia-service
            port:
              number: 30102
